Added location backup w google maps, improved UI

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -4,7 +4,7 @@
    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
    crossorigin="anonymous"></script>
 <script src="semantic/dist/semantic.min.js"></script>
-
+<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/series-label.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
@@ -17,9 +17,9 @@
    </div>
    <!-- class="ui main center aligned text container" -->
    <div style="margin:80px" class="ui main center aligned text">
-      <div class="ui left aligned yellow segment">
-         <h1 class="ui huge header">
-            NextBuzz
+      <div class="ui left aligned segment inverted">
+         <h1 class="ui huge header" style="font-size:45pt;font-family: 'Righteous', cursive;">
+            <span style="color:#FABC0A">Next</span>Buzz
          </h1>
          <h3>Using machine learning to improve Georgia Tech bus arrival predictions.</h3>
       </div>
